# 2023RobotCode

./: .gitattributes  .gitignore  .gitmodules  .gvimrc  .travis.yml  .vimrc  2023_swerve_drive.yaml  Jenkinsfile  README.md  astyle.config  build_rio_tflite.txt  cross_build_ros.sh  cross_build_ros.txt  deploy.sh  deploy_rio_build.sh  editme.txt  handoff_testing.txt  install_cross_package.pl  install_tensorflow-1.15.3.sh  j120_hardware_patch.txt  j120_patch.sh  kjaget.vim  libnccl2_2.7.6-1+cuda10.2_arm64.deb  modules-l4t32-2-3-1.tbz2  post_proc_bag.py  pull_bags.sh  redo_auto.sh  rio_bashrc.sh  roboio_install_ros.sh  roborio_install_ros.sh  roborio_set_time.sh  robot_ipmasq.sh  robot_ipmasq_off.sh  roscore_roborio.tar.bz2  rtc-bq32k.ko  safe_search.sh  search_bag.sh  setup_ROS.sh  setup_cross_build.sh  setup_environment.sh  (+4 more)
field_map/: 2021emptyfield  2021emptyfield.cpp  CMakeLists.txt
zebROS_ws/src/base_trajectory/: CMakeLists.txt  README.md  package.xml  path.rviz
zebROS_ws/src/base_trajectory/config/: 2020_robot_base_trajectory.yaml  2022_robot_base_trajectory.yaml  2023_robot_base_trajectory.yaml  test_obstacle_cost.yaml
zebROS_ws/src/base_trajectory/launch/: test_obstacle_cost.launch
zebROS_ws/src/base_trajectory/msg/: Constraint.msg
zebROS_ws/src/base_trajectory/src/: base_trajectory.cpp  cuda_spline_utils.cu  cuda_utils.cu  galactic_path_gen.cpp  kinematic_constraints.cpp  matlab_printer.cpp  obstacle_calculator.cpp  obstacle_cost.cpp  obstacle_cost_impl_cpu.cpp  obstacle_cost_impl_cuda.cu  obstacle_gradient.cpp  obstacle_gradient_impl.cpp  obstacle_gradient_impl_cpu.cpp  obstacle_gradient_impl_cuda.cu  obstacle_gradient_impl_threaded.cpp  opt_params.cpp  opt_params_list.cpp  sample_trajectory.cpp  sample_trajectory_impl.cpp  sample_trajectory_impl_cpu.cpp  sample_trajectory_impl_cuda.cu  sample_trajectory_impl_hybrid.cu  sample_trajectory_impl_threaded.cpp  test_obstacle_cost.cpp  test_obstacle_gradient.cpp  test_sample_trajectory.cpp
zebROS_ws/src/base_trajectory/srv/: GenerateSpline.srv
zebROS_ws/src/behaviors/: CMakeLists.txt  package.xml
zebROS_ws/src/behaviors/action/: Align.action  Arm.action  Climb.action  DualExit.action  Elevator.action  Forearm.action  Intake.action  Path.action  PathToCenter.action  Place.action  SingleExit.action  SpinOut.action
zebROS_ws/src/behaviors/cfg/: GamePieceState2023.cfg
zebROS_ws/src/behaviors/chirp/: bluey.chrp  cantina_band.chrp  let_it_go.chrp  mario.chrp  peppapig.chrp
zebROS_ws/src/behaviors/config/: 2020_general_actionlib.yaml  2022_climb_config.yaml  2022_index_server.yaml  2022_intake_config.yaml  2022_rumble_apriltag_locations.yaml  2022_shooter_config.yaml  2023_align_to_substation_config.yaml  2023_apriltag_locations.yaml  2023_elevator_config.yaml  2023_fourbar_config.yaml  2023_fourbar_elevator_paths.yaml  2023_game_piece_state_config.yaml  2023_grid_alignment_config.yaml  2023_grid_locations.yaml  2023_intake_config.yaml  2023_intake_reader_config.yaml  2023_intaking_config.yaml  2023_placing_config.yaml  2024_align_and_shoot_config.yaml  2024_align_speaker_config.yaml  2024_align_to_trap.yaml  2024_arm_control.yaml  2024_claw_config.yaml  2024_claw_preshooter_config.yaml  2024_clawer_config.yaml  2024_clawster_config.yaml  2024_climbing_config.yaml  2024_conveyor_diverter_config.yaml  2024_drive_object_intake.yaml  2024_intaking_config.yaml  2024_moving_while_shooting_config.yaml  2024_preshooter_config.yaml  2024_rumble_server_config.yaml  2024_shooter_config.yaml  2024_shooter_pivot_magic.yaml  2024_shooter_speed.yaml  2024_shooting_config.yaml  2024_subwoofer_shooter.yaml  align_server.yaml  align_to_shoot_actionlib.yaml  (+22 more)
zebROS_ws/src/behaviors/launch/: 2019_dev.launch  2019_dev_rio.launch  2022_apriltag_shooting.launch  2022_climb.launch  2022_index.launch  2023_align_to_grid.launch  2023_align_to_grid_closed_loop.launch  2023_align_to_substation.launch  2023_balance.launch  2023_elevator.launch  2023_fourbar.launch  2023_fourbar_elevator_path.launch  2023_game_piece_state.launch  2023_intake.launch  2023_intaking.launch  2023_placing.launch  2024_align_and_shoot.launch  2024_align_to_shoot_speaker.launch  2024_align_to_speaker.launch  2024_align_to_trap.launch  2024_arm.launch  2024_claw.launch  2024_clawster.launch  2024_climb.launch  2024_diverter.launch  2024_drive_and_score.launch  2024_drive_to_object_and_intake.launch  2024_intaking.launch  2024_moving_while_shooting.launch  2024_preshooter.launch  2024_preshooter_and_claw.launch  2024_rumble_server.launch  2024_shoot_to_subwoofer.launch  2024_shooter.launch  2024_shooting.launch  align_to_object.launch  apriltag_path_test.launch  auto_node.launch  drive_to_object.launch  jetson_hardware_nodes.launch  (+2 more)
zebROS_ws/src/behaviors/path/: 2024_autos.chor  2024_autos_9000.chor  2024_autos_fast.chor  2024_autos_mid.chor  2note.chor  BalanceOnOtherStation_csv.csv  GetCone_csv.csv  PlacePickCone_csv.csv  PlacePickCone_csv.path  Test4Note1_blue_csv.csv  Test4Note2_blue_csv.csv  Test4Note2_red_csv.csv  Test4Note3_blue_csv.csv  TwoNoteRed_csv.csv  (+246 more)
zebROS_ws/src/cuda_apriltag_ros/: CMakeLists.txt  package.xml
zebROS_ws/src/deeptag_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml
zebROS_ws/src/gazebo_frcrobot_control/: CMakeLists.txt  package.xml
zebROS_ws/src/gpu_apriltag/: CMakeLists.txt  nodelet_plugins.xml  package.xml
zebROS_ws/src/moveit_launch/: CMakeLists.txt  package.xml
zebROS_ws/src/ros_control_boilerplate/: CMakeLists.txt  frcrobot_gazebosim_plugins.xml  package.xml
zebROS_ws/src/tagslam_launch/: CMakeLists.txt  package.xml
zebROS_ws/src/talon_controllers/: CMakeLists.txt  orchestra_controller_plugins.xml  package.xml  talonfxpro_controllers_plugins.xml
zebROS_ws/src/talon_state_controller/: CMakeLists.txt  package.xml  talon_state_plugin.xml
zebROS_ws/src/talon_swerve_drive_controller/: CMakeLists.txt  package.xml  talon_swerve_drive_controller_plugins.xml
zebROS_ws/src/teleop_joystick_control/: CMakeLists.txt  package.xml
zebROS_ws/src/template_controller/: CMakeLists.txt  mech_controller_plugins.xml  package.xml
(+2958 files in other folders)
